2003-07-21  Earnie Boyd  <earnie@users.sf.net>

	* lists.shtml: Add verbiage about search forms.  Add gmane alternative
	search.

2003-06-30  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml: Correct ending tags throughout.
	* lists.shtml: Correct the archives link for mingw-dvlpr, mingw-editor
	and mingw-cvs.

2003-06-28  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml (Installing MinGW): Add content for individual tarball
	package installation.
	(Updating MinGW): Update with appropriate information.
	(Installing MSYS): Ditto.
	(Updating MSYS): Ditto.

2003-06-20  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml (Understanding MinGW Packages): Add more content.
	(Installing MinGW): Modify content into paragraphs.
	(Updating MInGW): Add section place holder.
	(Installing MSYS): Ditto.
	(Updating MSYS): Ditto.

2003-06-11  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml: Add a Contents section and unify the section titles.
	Modify verbiage explaining the packaging conventions.
	Add "Decompression and Unarchiving utilities" content header.
	Add "Installing MinGW" to Contents.

2003-06-06  Earnie Boyd  <earnie@users.sf.net>

	* download.shtml: Change titles and add wording for MSYS.
	* index.shtml ssi/lsidebar.shtml: Move the SF Logo GIF to the left
	sidebar.

2003-05-30  Earnie Boyd  <earnie@users.sf.net>

	* ssi/release.html: Remove the CVS version as this file is now
	dynamically created.

2003-05-27  Earnie Boyd  <earnie@users.sf.net>

	* docs.shtml: Add Thomas Messenger's tutorial about compiled html help.

2003-03-16  Nathan Fisher <natbobc@users.sf.net>
	
	* mingwfaq.shtml: Fix Makefile comments.
	Add GJC and GPC to the languages section.
	Change --shared to -shared in JNI DLL section.

2003-03-15  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Add Makefile section.
	Add JNI DLL section.
	Add Supported Languages section.
	
2003-03-01  Nathan Fisher <natbobc@users.sf.net>

	* links.shtml: Fix bug report #694983.
	Thanks to Maciej.