@@ -1,22 +1,25 @@
-<!--$Id: lsidebar.html,v 1.28 2003-06-06 19:03:13 earnie Exp $-->
-<!-- ================================================================== -->
-<!--                                                                    -->
-<!--			                   Left Sidebar                               -->
-<!--                                                                    -->
+<!--$Id: lsidebar.html,v 1.29 2003-09-16 18:30:47 natbobc Exp $-->
+<!-- ======================================================================= -->
+<!--                                                                         -->
+<!--                              Left Sidebar                               -->
+<!--                                                                         -->
 
 <table border="0">
    <tr><th align="center" colspan="2"><font size="+1">MinGW</font><br /><hr /></th></tr>
    <tr><td colspan="2"><a href="index.shtml">MinGW Home</a></td></tr>
    <tr><td colspan="2"><a href="licensing.shtml">Licensing Terms</a></td></tr>
-   <tr><td colspan="2"><a href="lists.shtml">Mailing Lists</a></td></tr>
+   <tr><td colspan="2"><a href="lists.shtml">Mailing List &amp; Forums</a>
+	</td></tr>
    <tr><td colspan="2"><a href="bugs.shtml">Reporting Bugs</a></td></tr>
    <tr><td colspan="2"><a href="msys.shtml">MSYS</a></td></tr>
    <tr><td colspan="2"><a href="docs.shtml">Documentation</a></td></tr>
    <tr><td><tt>&nbsp;</tt></td>
    <td><small><a href="mingwfaq.shtml">Frequently Asked Questions (FAQ)</a></small></td></tr>
    <tr><td colspan="2"><a href="links.shtml">Related Sites</a></td></tr>
-   <!--<tr><td colspan="2"><a href="ported.shtml">Ported Software</a></td></tr>-->
-   <!--<tr><td colspan="2"><a href="who.shtml">Who are we?</a></td></tr>-->
+<!--
+   <tr><td colspan="2"><a href="ported.shtml">Ported Software</a></td></tr>
+   <tr><td colspan="2"><a href="who.shtml">Who are we?</a></td></tr>
+-->
    <tr><td colspan="2"><a href="news.shtml">News</a></td></tr>
    <tr><td colspan="2"><a href="history.shtml">Project History</a></td></tr>
    <tr><td colspan="2"><a href="download.shtml">Download</a></td></tr>
